# BitmapPlusPlus

./: .clang-format  .gitignore  BitmapPlusPlus.hpp  CMakeLists.txt  Example.cpp  LICENSE  LICENSE.md  README.md
.github/workflows/: CI.yml  Integration.yml
Examples/: ReadBitmap.cpp  WriteBitmap.cpp
Examples/Fractals/: Julia.cpp  Mandelbrot.cpp
examples/: CMakeLists.txt  bernoulli_dist.cpp  chess_board.cpp  draw_primitives.cpp  polymorphic_shapes.cpp  read_bitmap.cpp  rotation.cpp  shapes.cpp  variant_shapes.cpp  write_bitmap.cpp
examples/fractals/: color_maps.inl  julia.cpp  mandelbrot.cpp
include/: BitmapPlusPlus.hpp
integration_tests/cpm/: CMakeLists.txt  Main.cpp  README.md  Readme.md
integration_tests/fetchcontent/: CMakeLists.txt  Main.cpp  README.md
lib/: CMakeLists.txt
lib/include/: BitmapPlusPlus.hpp
